[metadata]
name = jarvis4se
version = 1.1.3
author = Justin ANCELOT
author_email = not2behere@gmx.fr
description = Jarvis 4 Systems Engineers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rcasteran/jarvis4se
project_urls = 
	Bug Tracker = https://github.com/rcasteran/jarvis4se/issues
	Github.io = https://rcasteran.github.io/jarvis4se/
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

